--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,3 +5,19 @@ body {
 
   font-family: "Roboto", sans-serif;
 }
+
+
+/* .roboto-<uniquifier> {
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
+.sue-ellen-francisco-regular {
+  font-family: "Sue Ellen Francisco", cursive;
+  font-weight: 400;
+  font-style: normal;
+} */
