--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,15 @@ body {
   padding: 0;
   box-sizing: border-box;
 
-  font-family: "Roboto", sans-serif;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(to bottom, #ffd6e8 0%, #ffffff 100%);
+
 }
 
 
