--- a/client/src/pages/login/styles.css
+++ b/client/src/pages/login/styles.css
@@ -1,7 +1,7 @@
-body {
+/* body {
     background: linear-gradient(120deg, #e0eafc 0%, #cfdef3 100%);
     min-height: 100vh;
-}
+} */
 
 .login-container {
     max-width: 350px;
