--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,7 +10,8 @@ body {
 
   width: 100%;
   height: 100vh;
-  background: linear-gradient(to bottom, #ffd6e8 0%, #ffffff 100%);
+  background-color: honeydew;
+  /* background: linear-gradient(to bottom, #ffd6e8 0%, #ffffff 100%); */
 
 }
 
